Arialが微妙なのでフォントを変更

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,5 +151,5 @@
 }
 
 body {
-  font-family: Helvetica, Arial, var(--font-noto-sans-jp), sans-serif
+  font-family: Helvetica, var(--font-noto-sans-jp), sans-serif
 }
